use jetty http client
Signed-off-by: Richard Koshak <rlkoshak@gmail.com>